--- a/finetune_playground.ipynb
+++ b/finetune_playground.ipynb
@@ -52,7 +52,7 @@
     "                                                                torch_dtype=torch.float16, \n",
     "                                                                variant=\"fp16\",\n",
     "                                                                use_safetensors=True,\n",
-    "                                                                cache_dir='/work/pi_ahoumansadr_umass_edu/jroh/jroh_umass_edu/.cache/huggingface/hub').to(\"cuda\")\n",
+    "                                                                cache_dir='/cache').to(\"cuda\")\n",
     "\n",
     "generator = torch.Generator(\"cuda\")"
    ]
